# VacanciesDB

./: README.MD  config.py  main.py  pyproject.toml
data/: emp.json  vac.json  vacancies.json  vacancies_emp.json
src/: abstract_api.py  abstract_file_methods.py  api_emp.py  class_api.py  class_api_employers.py  class_connection_to_db.py  class_create_db.py  class_db_manager.py  class_json_saver.py  class_vacancies.py  ejemplo.py  user_interaction.py  user_interaction_postgres.py  utils.py
tests/: test_api.py  test_interaction.py  test_json_saver.py  test_utils.py  test_vacancies.py  test_vacancy.py
